<resources>
    <string name="app_name">Dish\'it</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- App drawer menu strings -->
    <string name="nav_title_tools">Tools</string>
    <string name="nav_home">Get a suggestion</string>
    <string name="nav_dinner_history">Dinner History</string>
    <string name="nav_dinner_plan">Dinner plan</string>
    <string name="nav_statistics">Your statistics</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_preferences">Preferences</string>
    <string name="nav_settings">Settings</string>

    <!-- Content Home strings -->
    <string name="home_dinner_new_suggestion_button">New Suggestion</string>

    <!-- Content Dinner History strings -->
    <string name="dinner_history_clear_filter_button">Clear Filter</string>
    <string name="dinner_history_filter_from">Filter From:</string>
    <string name="dinner_history_filter_to">Filter To:</string>
    <string name="dinner_history_choose_date">Choose date</string>
    <string name="error_date_after_current_date">Error: Can\'t set date after current date.</string>
    <string name="error_filterFrom_after_filterTo">Error: "Filter From" can\'t be after "Filter To"</string>
    <string name="error_filterTo_before_filterFrom">Error: "Filter To" can\'t be before "Filter From"</string>
    <string name="dinner_list_item_date_pretext">""</string>
    <string name="dinner_history_delete_dinner_title">Delete Dinner?</string>
    <string name="dinner_history_delete_dinner_message_pt1">Do you wish to delete</string>
    <!-- Dinner name goes between pt1 and pt2 -->
    <string name="dinner_history_delete_dinner_message_pt2">from your log?</string>
    <string name="dinner_history_delete_dinner_OK">Yes</string>
    <string name="dinner_history_delete_dinner_cancel">No</string>

    <!-- Activity Add Dinner strings -->
    <string name="add_dinner_title">Add a new dinner</string>
    <string name="add_dinner_name">Dinner Name:\*</string>
    <string name="add_dinner_obligatory">\*obligatory</string>
    <string name="add_dinner_edit_dinner_name">Enter the name of the dinner...</string>
    <string name="add_dinner_description">Dinner Description:</string>
    <string name="add_dinner_edit_dinner_description">Enter a description of the dinner...</string>
    <string name="add_dinner_category">Dinner Category:</string>
    <string name="add_dinner_edit_category">Enter a category...</string>
    <string name="add_dinner_rating">Rate the Dinner:</string>
    <string name="add_dinner_choose_date_button">Choose a Date:</string>
    <string name="add_dinner_save_button">Save Dinner</string>
    <string name="add_dinner_cancel_button">Cancel</string>
    <string name="add_dinner_choose_ingredients">Choose Ingredients:</string>

    <!-- Statistics Activity strings -->
    <string name="title_activity_statistics">Statistics</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_preferences">Preferences</string>

    <!-- Preferences Activity strings -->
    <string name="preferences_title">Preferences</string>

    <!-- Dialog Fragment strings -->
    <string name="dialog_title">Choose Ingredient</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_confirm_button">Confirm</string>
    <string name="dialog_add_ingredient_button">+Add new ingredient</string>

    <!-- Enum values -->
    <string name="enum_meat">Meat</string>
    <string name="enum_poultry">Poultry</string>
    <string name="enum_seafood">Seafood</string>
    <string name="enum_vegetable">Vegetables</string>
    <string name="enum_herb">Herbs</string>
    <string name="enum_spice">Spices</string>
    <string name="enum_fruit">Fruits</string>
    <string name="enum_nuts">Nuts and Seeds</string>
    <string name="enum_dairy">Dairy</string>
    <string name="enum_cereal">Cereal</string>
    <string name="enum_other">Other</string>
    <string name="enum_oil">Oil</string>
</resources>
