<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home" android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/nav_home" />
        <item android:id="@+id/nav_log_food" android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/nav_log_food" />
        <item android:id="@+id/nav_dinner_plan" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/nav_dinner_plan" />
        <item android:id="@+id/nav_statistics" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/nav_statistics" />
    </group>

    <item android:title="@string/nav_title_tools">
        <menu>
            <item android:id="@+id/nav_feedback" android:icon="@android:drawable/ic_menu_send"
                android:title="@string/nav_feedback" />
            <item android:id="@+id/nav_preferences" android:icon="@android:drawable/ic_menu_share"
                android:title="@string/nav_preferences" />
            <item android:id="@+id/nav_settings" android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/nav_settings" />
        </menu>
    </item>

</menu>